--- a/public/style/all.css
+++ b/public/style/all.css
@@ -6,6 +6,7 @@
 @import url('./components/postItem.css');
 @import url('./components/userLogo.css');
 @import url('./components/fieldset.css');
+@import url('./components/commetns.css');
 
 @import url('./pages/siginIn.css');
 @import url('./pages/profile.css');
